--- a/templates/template-nextjs-ts/package.json
+++ b/templates/template-nextjs-ts/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emd-cloud/react-components": "^1.13.6",
-    "react": "^19.0.0-rc-0",
-    "react-dom": "^19.0.0-rc-0",
-    "next": "^15.0.0"
+    "@emd-cloud/react-components": "^1.14.0",
+    "@emd-cloud/sdk": "^1.11.0",
+    "next": "^16.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "tus-js-client": "^4.3.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "eslint": "^8.55.0",
-    "eslint-config-next": "^15.0.0"
+    "typescript": "^5.9.3",
+    "@types/node": "^22.12.0",
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.2",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^16.0.0"
   }
 }
