--- a/templates/template-nextjs/package.json
+++ b/templates/template-nextjs/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emd-cloud/react-components": "^1.13.6",
-    "react": "^19.0.0-rc-0",
-    "react-dom": "^19.0.0-rc-0",
-    "next": "^15.0.0"
+    "@emd-cloud/react-components": "^1.14.0",
+    "@emd-cloud/sdk": "^1.11.0",
+    "next": "^16.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "tus-js-client": "^4.3.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.55.0",
-    "eslint-config-next": "^15.0.0"
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^16.0.0"
   }
 }
